# Cogitive_Stress_Adaptive_Cyber_Defense

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py
Sample_Demo/: Action Module_demo.ipynb  Action_examples.ipynb  Cognitive_Agent_Layer.ipynb  Demo_Results_v1.ipynb  Demo_Simluation SOC env.ipynb  Demo_Strees State Layer.ipynb  Demo_sim2.ipynb  Example_Results_V3.ipynb  Output Dashboard_examples.ipynb  Simluation SOC env2.ipynb  Stress-Aware Cognitive Detection Pipeline.ipynb  simulated_soc_decisions.csv
data/raw/cicids/: README.md
data/raw/wesad/: README.md
data/results/: README.md
experiments/: All_results_RUN.py  README.md  evaluate_loso.py  run_soc_simulation.py  train_stress_model.py
notebooks/: README.md
outputs/figures/: README.md
outputs/logs/: README.md
outputs/models/: README.md
results/paper/: reproduction_report_20251219_160819.txt  reproduction_report_20251219_161118.txt  reproduction_report_20251219_161135.txt  reproduction_report_20251219_161500.txt  reproduction_report_20251219_162110.txt  reproduction_report_20251219_162339.txt  reproduction_report_20251219_163538.txt
results/paper/Demo_results/soc/: synthetic_decisions_20251219_162339.csv  synthetic_metrics_20251219_162110.json  synthetic_metrics_20251219_162339.json
results/paper/soc/: cicids_decisions_20251219_162110.csv  cicids_decisions_20251219_162339.csv  cicids_decisions_20251219_163538.csv  cicids_metrics_20251219_162110.json  cicids_metrics_20251219_162339.json  cicids_metrics_20251219_163538.json  synthetic_decisions_20251219_162110.csv  synthetic_decisions_20251219_163538.csv  synthetic_metrics_20251219_163538.json
src/: config.py
src/data/: feature_extractor.py  signal_processor.py  wesad_loader.py
src/evaluation/: metrics.py  visualization.py
src/models/: cps_layer.py  speedyibl_agent.py  stress_classifier.py  uatr.py
src/soc/: cicids_soc.py  synthetic_soc.py
src/utils/: helpers.py
