# pyproject.toml - Modern Python project configuration
# PEP 518 compliant build system configuration

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stress-adaptive-defense"
version = "1.0.0"
description = "Cognitive-Physiological Synchronization Framework for Stress-Adaptive Cyber Defense in IoT Environments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Research Team", email = "research@example.com"}
]
maintainers = [
    {name = "Research Team", email = "research@example.com"}
]
keywords = [
    "stress",
    "cognitive-computing",
    "cybersecurity",
    "physiological-signals",
    "machine-learning",
    "IoT-security",
    "SOC",
    "decision-making",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scipy>=1.7.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "xgboost>=1.5.0,<3.0.0",
    "tensorflow>=2.8.0,<3.0.0",
    "neurokit2>=0.1.7,<1.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "tqdm>=4.62.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pylint>=2.15.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

signal = [
    "pywavelets>=1.3.0",
    "emd>=0.5.0",
]

temporal = [
    "hmmlearn>=0.2.7",
    "statsmodels>=0.13.0",
]

dl = [
    "tensorflow-addons>=0.17.0",
    "keras-tuner>=1.1.0",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinxcontrib-bibtex>=2.4.0",
]

all = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "jupyter>=1.0.0",
    "pywavelets>=1.3.0",
    "hmmlearn>=0.2.7",
    "statsmodels>=0.13.0",
    "tensorflow-addons>=0.17.0",
    "keras-tuner>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/stress-adaptive-defense"
Documentation = "https://github.com/yourorg/stress-adaptive-defense/wiki"
Repository = "https://github.com/yourorg/stress-adaptive-defense"
"Bug Tracker" = "https://github.com/yourorg/stress-adaptive-defense/issues"

[project.scripts]
train-stress-model = "experiments.train_stress_model:main"
evaluate-loso = "experiments.evaluate_loso:main"
run-soc-sim = "experiments.run_soc_simulation:main"
reproduce-paper = "experiments.reproduce_paper_results:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.pylint.format]
max-line-length = 100
